--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 		
 
 	<TimeSensor def="SUN_col_sensor" loop="true" cycleInterval="20"></TimeSensor>
-        <ColorInterpolator def="SUN_col_pos" key="0 0.5 1" keyValue="1 0 0, 0 1 0, 0 0 1">
+        <ColorInterpolator def="SUN_col_pos" key="0 0.5 1" keyValue="1 0 0  0 1 0  0 0 1">
         </ColorInterpolator>
         <Route fromNode="SUN_col_sensor" fromField="fraction_changed" toNode="SUN_col_pos" toField="set_fraction"></Route>
         <Route fromNode="SUN_col_pos" fromField="value_changed" toNode="SUN_col" toField="set_diffuseColor"></Route>
 	  
       <TimeSensor DEF='Timeup' cycleInterval="10"    loop="true"></TimeSensor>
-  <PositionInterpolator DEF='PosIntR' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='0 50 -15,0 45 -12, 0 30 -15, 0 25 -15,0 20 -17,0 15 -15 ,0 13 -11, 0 10 -14 , 0 7 -17,0 4 -13,0 0 -10'></PositionInterpolator>
+  <PositionInterpolator DEF='PosIntR' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='0 50 -15 0 45 -12  0 30 -15  0 25 -15 0 20 -17 0 15 -15  0 13 -11  0 10 -14   0 7 -17 0 4 -13 0 0 -10'></PositionInterpolator>
   <Transform DEF='TrG'> 
      <!--Лист-->
 	  <Transform "translation="0 50 -15" rotation = "0 1 0 -3.1" scale = "2 2 2">
@@ -75,7 +75,7 @@
   <ROUTE fromNode="PosIntR" fromField="value_changed" toNode="TrG" toField="set_translation"></ROUTE>
   
   <TimeSensor DEF='Timeup2' cycleInterval="8"    loop="true"></TimeSensor>
-  <PositionInterpolator DEF='PosIntR2' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='0 40 -30,0 33 -35, 0 30 -33, 0 27 -31,0 25 -28,0 15 -27 ,0 13 -30, 0 10 -33 , 0 7 -17,0 4 -30,0 0 -27'></PositionInterpolator>
+  <PositionInterpolator DEF='PosIntR2' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='0 40 -30 0 33 -35  0 30 -33  0 27 -31 0 25 -28 0 15 -27  0 13 -30  0 10 -33   0 7 -17 0 4 -30 0 0 -27'></PositionInterpolator>
   <Transform DEF='TrG2'> 
      <!--Лист-->
 	  <Transform "translation="0 50 -15" rotation = "0 1 0 -3.1" scale = "2 2 2">
@@ -87,7 +87,7 @@
   
   
    <TimeSensor DEF='Timeup3' cycleInterval="12"    loop="true"></TimeSensor>
-  <PositionInterpolator DEF='PosIntR3' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='10 50 -7, 12 45 -10, 10 40 -8, 7 27 -12,6 25 -15,8 15 -11 ,14 13 -8, 15 10 -7 , 13 7 -10,10 4 -12,8 0 -10'></PositionInterpolator>
+  <PositionInterpolator DEF='PosIntR3' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'  keyValue='10 50 -7  12 45 -10  10 40 -8  7 27 -12 6 25 -15 8 15 -11  14 13 -8  15 10 -7   13 7 -10 10 4 -12 8 0 -10'></PositionInterpolator>
   <Transform DEF='TrG3'> 
      <!--Лист-->
 	  <Transform "translation="10 50 -7" rotation = "0 1 0 -3.1" scale = "2 2 2">
