--- a/index.html
+++ b/index.html
@@ -8,55 +8,48 @@
 
   </head>
   	<body>
-    <h1>Лаба 3</h1>
+    <h1>Лаба 4</h1>
     <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom" width='1000px' height='600px'>
-      <Scene>
+    <Scene>
+        <TimeSensor DEF='Timetoroll' cycleInterval='10' loop='true'></TimeSensor> 
+        <OrientationInterpolator DEF='OrInt' key='0 0.5 1' keyValue='0 0 1 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator> 
+        <PositionInterpolator DEF='PosInt' key='0 0.2 0.4 0.6 0.8 1' keyValue='0 0 0 5 0 0 6 0 8 -7 0 6 -5 0 4 0 0 0'></PositionInterpolator>
 
+        <Transform rotation="0 0 1 -3.2" scale="5 5 5" DEF="Tr">
+           <Transform translation="0 0 0" rotation="1 0 0 1.6">
+              <Inline DEF="lol" url="logocopyVer2.x3d"></Inline>
+           </Transform>
+           <Transform translation="0 1 0" scale="5 1 1">
+              <shape>
+                  <appearance> 
+                    <ImageTexture url="prep.jpg"></ImageTexture>
+                  </appearance>
+                <box size="1 1 1"></box>
+              </shape>
+           </Transform>
+        </Transform>
 
-<TimeSensor DEF='Timetoroll' cycleInterval='10' loop='true'></TimeSensor> 
-<OrientationInterpolator DEF='OrInt' key='0 0.5 1' keyValue='0 0 1 0 0 0 1 -3.14 0 0 1 -6.28'></OrientationInterpolator> 
-<PositionInterpolator DEF='PosInt' key='0 0.2 0.4 0.6 0.8 1' keyValue='0 0 0 5 0 0 6 0 8 -7 0 6 -5 0 4 0 0 0'></PositionInterpolator>
+        <TimeSensor DEF='Time_lamp' cycleInterval='5' loop='true'></TimeSensor> 
+        <ColorInterpolator DEF='Collamp' key='0 0.3 0.6 1' keyValue='1 0 0, 1 0 0, 0 1 0, 0 1 0'></ColorInterpolator> 
+        <ROUTE fromNode='Time_lamp' fromField='fraction_changed' toNode='Collamp' toField='set_fraction'> </ROUTE> 
+        <ROUTE fromNode='Collamp' fromField='value_changed' toNode='lol' toField='set_diffuseColor'> </ROUTE>
 
-<Transform rotation="0 0 1 -3.2" scale="5 5 5", Transform DEF="Tr">
-   <Transform translation="0 0 0" rotation="1 0 0 1.6">
-      <Inline DEF="lol" url="logocopyVer2.x3d"></Inline>
-   </Transform>
-   <Transform translation="0 1 0" scale="5 1 1">
-      <shape>
+        <ROUTE fromNode='Timetoroll' fromField='fraction_changed' toNode='OrInt' toField='set_fraction'></ROUTE> 
+        <ROUTE fromNode='OrInt' fromField='value_changed' toNode='Tr' toField='set_rotation'></ROUTE> 
+        <ROUTE fromNode='Timetoroll' fromField='fraction_changed' toNode='PosInt' toField='set_fraction'></ROUTE> 
+        <ROUTE fromNode='PosInt' fromField='value_changed' toNode='Tr' toField='set_translation'></ROUTE>
+
+        <Transform translation='2 50 0' rotation="1 0 0 1.6">
+        <shape>
           <appearance> 
-            <ImageTexture url="prep.jpg"></ImageTexture>
+            <ImageTexture url="guapbm.jpg"></ImageTexture>
           </appearance>
-        <box size="1 1 1"></box>
-      </shape>
-   </Transform>
-</Transform>
+          <box size = "45 20 20"></box>
+        </shape>
+        </Transform>
 
-<TimeSensor DEF='Time_lamp' cycleInterval='5' loop='true'></TimeSensor> 
-<ColorInterpolator DEF='Collamp' key='0 0.3 0.6 1' keyValue='1 0 0, 1 0 0, 0 1 0, 0 1 0'></ColorInterpolator> 
-<ROUTE fromNode='Time_lamp' fromField='fraction_changed' toNode='Collamp' toField='set_fraction'> </ROUTE> 
-<ROUTE fromNode='Collamp' fromField='value_changed' toNode='lol' toField='set_diffuseColor'> </ROUTE>
-
-          <ROUTE fromNode='Timetoroll' fromField='fraction_changed' toNode='OrInt' toField='set_fraction'></ROUTE> 
-<ROUTE fromNode='OrInt' fromField='value_changed' toNode='Tr' toField='set_rotation'></ROUTE> 
-<ROUTE fromNode='Timetoroll' fromField='fraction_changed' toNode='PosInt' toField='set_fraction'></ROUTE> 
-<ROUTE fromNode='PosInt' fromField='value_changed' toNode='Tr' toField='set_translation'></ROUTE>
-
-
-
-<Transform translation='2 50 0' rotation="1 0 0 1.6">
-<shape>
-  <appearance> 
-    <ImageTexture url="guapbm.jpg"></ImageTexture>
-  </appearance>
-  <box size = "45 20 20"></box>
-</shape>
-</Transform>
-
-      <!--Камеры-->
-
-      <Viewpoint description="вьюпоинт 1" position="3 -10 0" orientation="1 0 0 1.6"></Viewpoint>
-
-
+        <Viewpoint description="вьюпоинт 1" position="3 -10 0" orientation="1 0 0 1.6"></Viewpoint>
+        
       </Scene>
     </X3D>
   </body>
